# PPR

./: README.md
cuda-2-NikolaKasnar/: CMakeLists.txt  README.md  main.cu
cuda-bfs-NikolaKasnar/: bfs.cpp  main.cu  sparse.cpp
cuda-matmul-NikolaKasnar/: main.cu
cuda-matvec-pred-NikolaKasnar/: CMakeLists.txt  csr_mat.h  csr_mat_base.h  csr_mat_um.h  csr_mat_um_pre.h  lapmat.h  mat-vec-csr-lap-um-pre.cu  mat-vec-csr-lap-um.cu  mat-vec-csr-lap.cu  mat-vec-csr.cu  matrix.h  test_csrmat.cpp  test_matrix.cpp  um_example_1.cu  um_example_2.cu  um_example_3.cu
floyd-NikolaKasnar/: CMakeLists.txt  README.md  clock.h  floyd.cpp  floyd.h  main.cpp  random_int.h
mandelbrot-NikolaKasnar/: CMakeLists.txt  README.md  mandelbrot.cpp
ompgauss-NikolaKasnar/: CMakeLists.txt  README.md  REZULTATI.txt  gauss.cpp
ompmerge-NikolaKasnar/: README.md  REZULTATI.txt  aux.h  main.cpp
scan-th-NikolaKasnar/: CMakeLists.txt  README.md  aux.h  clock.h  main.cpp  parallel_scan.cpp  random_int.h
ts-list-NikolaKasnar/: CMakeLists.txt  README.md  main.cpp  test.cpp  ts_list.h
